# crement

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
tests/: 01_basic.rs  02_copy_types.rs  03_clone_only.rs  04_complex_exprs.rs  05_sequences.rs  06_ui.rs
tests/ui/: empty_input.rs  empty_input.stderr  no_clone.rs  no_clone.stderr  no_operator.rs  no_operator.stderr  spaced_operator.rs  spaced_operator.stderr
